--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,34 +1,46 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angel's Treasures</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
-  </head>
-  <body>
+</head>
+
+<body>
+
     <header class="navbar-fixed">
-      <nav>
-        <div class="nav-wrapper">
-          <ul>
-            <li>
-              <a href="/" class="left brand-logo">Angel Treasure</a>
-            </li>
-          </ul>
-          <ul class="right">
-            <li><a href="/about">About</a></li>
-          </ul>
-        </div>
-      </nav>
+        <nav>
+            <div class="nav-wrapper">
+                <ul>
+                    <li>
+                        <a href="/" class="left brand-logo">&nbsp;&nbsp;AngelTreasure</a>
+                    </li>
+                </ul>
+                <ul class="right">
+                    <li><a href="/about">About</a></li>
+                    <li><a href="{% url 'user_create' %}">Add a User</a></li>
+                    <li><a href="/jewelry">View Jewelry</a></li>
+                    <li><a href="{% url 'bead_create' %}">Add Beads</a></li>
+                    <li><a href="{% url 'bead_index' %}">Beads</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
+
     <main class="container">{% block content %} {% endblock %}</main>
+
     <footer class="page-footer">
-      <div class="right">
-        All Rights Reserved, © 2022 Angel's Treasures
-      </div>
+        <div class="right">
+            All Rights Reserved, &copy; 2022 Angel's Treasures &nbsp;
+        </div>
     </footer>
-  </body>
+
+</body>
+
 </html>
