--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,13 +19,13 @@
             <div class="nav-wrapper">
                 <ul>
                     <li>
-                        <a href="/" class="left brand-logo">&nbsp;&nbsp;AngelTreasure</a>
+                        <a href="/" class="left brand-logo">&nbsp;&nbsp;Angel's Treasure</a>
                     </li>
                 </ul>
                 <ul class="right">
                     <li><a href="/about">About</a></li>
-                    
                     <li><a href="/jewelry">View Jewelry</a></li>
+                    <li><a href="{% url 'jewelry_create' %}">Add Jewelry</a></li>
 
                 </ul>
             </div>
